fix(awards): add invisible title for section

--- a/css/style.css
+++ b/css/style.css
@@ -1254,6 +1254,9 @@ p {
 .section__title_left {
   text-align: left;
 }
+.section__title_unvisible {
+  display: none;
+}
 
 .awards {
   background-color: #34547a;
